# INF2004-Project

./: .clang-format  .clang-tidy  .cppcheck  .gitignore  ABBREV.md  CMakeLists.txt  Doxyfile  FreeRTOSConfig_8h_source.html  LICENSE.txt  README.md  a__star_8c.html  a__star_8c.js  a__star_8c__incl.map  a__star_8c__incl.md5  a__star_8c_a0467d77650c85f7690212ed6d3c5a2e3_cgraph.map  a__star_8c_a0467d77650c85f7690212ed6d3c5a2e3_cgraph.md5  a__star_8c_a1422b2589ed850b4626defbd93c9998a_cgraph.md5  a__star_8c_a454e910ecd336d1249010e468f6b2c07_cgraph.map  a__star_8c_a454e910ecd336d1249010e468f6b2c07_icgraph.map  a__star_8c_a454e910ecd336d1249010e468f6b2c07_icgraph.md5  a__star_8c_a6d82d3636110fd676cb68188a8351c3a_cgraph.map  a__star_8c_a6d82d3636110fd676cb68188a8351c3a_cgraph.md5  a__star_8c_aa93e473768652772f2577e1564b89d91_cgraph.md5  a__star_8c_ac106312a2e54f3fcfbc7b8f9893bb9c6_icgraph.md5  a__star_8h.html  a__star_8h.js  a__star_8h__dep__incl.map  a__star_8h__dep__incl.md5  a__star_8h__incl.map  a__star_8h__incl.md5  a__star_8h_a0467d77650c85f7690212ed6d3c5a2e3_cgraph.map  a__star_8h_a0467d77650c85f7690212ed6d3c5a2e3_cgraph.md5  a__star_8h_a1422b2589ed850b4626defbd93c9998a_cgraph.map  a__star_8h_aa93e473768652772f2577e1564b89d91_cgraph.map  a__star_8h_ac106312a2e54f3fcfbc7b8f9893bb9c6_cgraph.md5  a__star_8h_ac106312a2e54f3fcfbc7b8f9893bb9c6_icgraph.map  a__star_8h_source.html  annotated.html  annotated_dup.js  barcode_8c.html  (+641 more)
.github/workflows/: ctest.yml  docs.yml
docs/: dataflow.d2
drivers/: CMakeLists.txt
drivers/ir_sensor/: ir_sensor.c
drivers/magnetometer/: magnetometer.c
images/: blockdiagram.d2  callgraph.d2  dataflow.d2  flowchart.puml
include/: CMakeLists.txt  a_star.h  binary_heap.h  maze.h
main/: CMakeLists.txt  main.c
main/driver/: CMakeLists.txt
main/driver/encoder/: CMakeLists.txt  main.c  wheel_encoder.c  wheel_encoder.h
main/driver/irline/: CMakeLists.txt  barcode.c  barcode.h  ir_sensor.c  ir_sensor.h  main.c
main/driver/magnetometer/: CMakeLists.txt  magnetometer.c  magnetometer.h  main.c
main/driver/motor/: CMakeLists.txt  main.c  motor_control.c  motor_control.h
main/driver/pid/: CMakeLists.txt  main.c  pid.c  pid.h
main/driver/ultrasonic/: CMakeLists.txt  main.c  ultrasonic.c  ultrasonic.h
main/driver/wifi/: CMakeLists.txt  main.c  wifi.c  wifi.h
main/drivers/: CMakeLists.txt
main/drivers/ir_sensor/: ir_sensor.c
main/drivers/motor_controller/: motor_control.c
main/drivers/wheel_encoder/: wheel_encoder.c
main/drivers/wifi/: wifi.c
main/pathfinding/: CMakeLists.txt  a_star.c  a_star.h  binary_heap.c  binary_heap.h  dfs.c  dfs.h  floodfill.c  floodfill.h  maze.c  maze.h  print_maze.py
main/pid/: CMakeLists.txt  error_correction.c  main.c  pid.c  pid.h
pathfinding/: CMakeLists.txt  a_star.c  maze.c
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  defines_1.js  defines_2.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+61 more)
src/: CMakeLists.txt  main.c  pico_pathfinding_tests.c
src/drivers/: CMakeLists.txt
src/drivers/encoder/: CMakeLists.txt  main.c  wheel_encoder.c  wheel_encoder.h
src/drivers/irline/: CMakeLists.txt  barcode.c  barcode.h  ir_sensor.c  ir_sensor.h  main.c
src/drivers/magnetometer/: CMakeLists.txt  magnetometer.c  magnetometer.h  main.c
src/drivers/motor/: CMakeLists.txt  main.c  motor_control.c  motor_control.h
src/drivers/pid/: CMakeLists.txt  main.c  pid.c  pid.h
src/drivers/ultrasonic/: CMakeLists.txt  main.c  ultrasonic.c  ultrasonic.h
src/drivers/wifi/: CMakeLists.txt  main.c  tcp_client.py  wifi.c  wifi.h
src/pathfinding/: CMakeLists.txt  a_star.c  a_star.h  binary_heap.c  binary_heap.h  dfs.c  dfs.h  floodfill.c  floodfill.h  maze.c  maze.h  print_maze.py
src/pid/: CMakeLists.txt  main.c  pid.c  pid.h
tests/: CMakeLists.txt  dfs_tests.c  floodfill_tests.c  navigation_tests.c  pathfinding_tests.c  pid_tests.c  project_test.c  tests.c
